<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_500"
    android:backgroundTint="#060707"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/twCalc"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/twCalc"
        android:textAlignment="viewEnd"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="#fefefe"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/twRes" />

    <TextView
        android:id="@+id/twRes"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/twRes"
        android:textAlignment="viewEnd"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="#fefefe"
        android:textSize="60sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/twCalc"
        app:layout_constraintStart_toStartOf="@+id/twCalc"
        app:layout_constraintTop_toBottomOf="@+id/twCalc">

        <Button
            android:id="@+id/btnAC"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="0dp"
            android:layout_height="90dp"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"
            android:background="#132BB5"
            android:backgroundTint="#311B92"
            android:fontFamily="sans-serif-medium"
            android:text="@string/btnAC"
            android:textColor="#fefefe"
            android:textSize="40sp" />

        <Button
            android:id="@+id/btnDel"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="0dp"
            android:layout_height="90dp"
            android:layout_marginStart="4dp"
            android:layout_weight="1"
            android:backgroundTint="#311B92"
            android:fontFamily="sans-serif-medium"
            android:text="@string/btnDel"
            android:textColor="#fefefe"
            android:textSize="40sp"
            app:icon="@drawable/abc_vector_test"
            app:iconSize="40dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout1"
        app:layout_constraintStart_toStartOf="@+id/linearLayout1"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout1">

        <Button
            android:id="@+id/btn7"
            android:layout_width="wrap_content"
            android:layout_height="90dp"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"
            android:background="@color/black"
            android:backgroundTint="#606a73"
            android:fontFamily="sans-serif-thin"
            android:foregroundGravity="center_vertical|clip_horizontal"
            android:text="@string/btn7"
            android:textAlignment="center"
            android:textColor="#fefefe"
            android:textSize="60sp" />

        <Button
            android:id="@+id/btn8"
            android:layout_width="wrap_content"
            android:layout_height="90dp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"
            android:backgroundTint="#606a73"
            android:fontFamily="sans-serif-thin"
            android:text="@string/btn8"
            android:textColor="#fefefe"
            android:textSize="60sp" />

        <Button
            android:id="@+id/btn9"
            android:layout_width="wrap_content"
            android:layout_height="90dp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"
            android:backgroundTint="#606a73"
            android:fontFamily="sans-serif-thin"
            android:text="@string/btn9"
            android:textColor="#fefefe"
            android:textSize="60sp" />

        <Button
            android:id="@+id/btnDiv"
            android:layout_width="wrap_content"
            android:layout_height="90dp"
            android:layout_marginStart="4dp"
            android:layout_weight="1"
            android:backgroundTint="#333a40"
            android:fontFamily="sans-serif-thin"
            android:text="@string/btnDiv"
            android:textColor="#fefefe"
            android:textSize="60sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout2"
        app:layout_constraintStart_toStartOf="@+id/linearLayout2"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <Button
            android:id="@+id/btn4"
            android:layout_width="wrap_content"
            android:layout_height="90dp"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"
            android:backgroundTint="#606a73"
            android:fontFamily="sans-serif-thin"
            android:text="@string/btn4"
            android:textColor="#fefefe"
            android:textSize="60sp" />

        <Button
            android:id="@+id/btn5"
            android:layout_width="wrap_content"
            android:layout_height="90dp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"
            android:backgroundTint="#606a73"
            android:fontFamily="sans-serif-thin"
            android:text="@string/btn5"
            android:textColor="#fefefe"
            android:textSize="60sp" />

        <Button
            android:id="@+id/btn6"
            android:layout_width="wrap_content"
            android:layout_height="90dp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"
            android:backgroundTint="#606a73"
            android:fontFamily="sans-serif-thin"
            android:text="@string/btn6"
            android:textColor="#fefefe"
            android:textSize="60sp" />

        <Button
            android:id="@+id/btnMult"
            android:layout_width="wrap_content"
            android:layout_height="90dp"
            android:layout_marginStart="4dp"
            android:layout_weight="1"
            android:backgroundTint="#333a40"
            android:fontFamily="sans-serif-thin"
            android:text="@string/btnMult"
            android:textColor="#fefefe"
            android:textSize="60sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout3"
        app:layout_constraintStart_toStartOf="@+id/linearLayout3"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

        <Button
            android:id="@+id/btn1"
            android:layout_width="wrap_content"
            android:layout_height="90dp"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"
            android:backgroundTint="#606a73"
            android:fontFamily="sans-serif-thin"
            android:text="@string/btn1"
            android:textColor="#fefefe"
            android:textSize="60sp" />

        <Button
            android:id="@+id/btn2"
            android:layout_width="wrap_content"
            android:layout_height="90dp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"
            android:backgroundTint="#606a73"
            android:fontFamily="sans-serif-thin"
            android:text="@string/btn2"
            android:textColor="#fefefe"
            android:textSize="60sp" />

        <Button
            android:id="@+id/btn3"
            android:layout_width="wrap_content"
            android:layout_height="90dp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"
            android:backgroundTint="#606a73"
            android:fontFamily="sans-serif-thin"
            android:text="@string/btn3"
            android:textColor="#fefefe"
            android:textSize="60sp" />

        <Button
            android:id="@+id/btnSub"
            android:layout_width="wrap_content"
            android:layout_height="90dp"
            android:layout_marginStart="4dp"
            android:layout_weight="1"
            android:backgroundTint="#333a40"
            android:fontFamily="sans-serif-thin"
            android:text="@string/btnSub"
            android:textColor="#fefefe"
            android:textSize="60sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout4"
        app:layout_constraintStart_toStartOf="@+id/linearLayout4"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4">

        <Button
            android:id="@+id/btnDot"
            android:layout_width="wrap_content"
            android:layout_height="90dp"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"
            android:backgroundTint="#505960"
            android:fontFamily="sans-serif-thin"
            android:text="@string/btnDot"
            android:textColor="#fefefe"
            android:textSize="60sp" />

        <Button
            android:id="@+id/btn0"
            android:layout_width="wrap_content"
            android:layout_height="90dp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"
            android:backgroundTint="#505960"
            android:fontFamily="sans-serif-thin"
            android:text="@string/btn0"
            android:textColor="#fefefe"
            android:textSize="60sp" />

        <Button
            android:id="@+id/btnEquals"
            android:layout_width="wrap_content"
            android:layout_height="90dp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"
            android:backgroundTint="#db6302"
            android:fontFamily="sans-serif-thin"
            android:text="@string/btnEquals"
            android:textColor="#fefefe"
            android:textSize="60sp" />

        <Button
            android:id="@+id/btnAdd"
            android:layout_width="wrap_content"
            android:layout_height="90dp"
            android:layout_marginStart="4dp"
            android:layout_weight="1"
            android:backgroundTint="#333a40"
            android:fontFamily="sans-serif-thin"
            android:text="@string/btnAdd"
            android:textColor="#fefefe"
            android:textSize="60sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>